--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>VR Villa – DREAM HOUSE</title>
+    <title>DREAM HOUSE - PS/CSC/22/0053</title>
 
     <!-- A-Frame -->
     <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
@@ -22,9 +22,7 @@
       <a-light type="directional" position="20 30 -10" intensity="1.2">
       </a-light>
 
-      <!--  -->
       <!-- GROUND -->
-      <!--  -->
 
       <!-- Grass -->
       <a-plane
@@ -46,7 +44,6 @@
       >
       </a-plane>
 
-      <!-- -->
       <!-- REGISTRATION NUMBER -->
 
       <a-text
@@ -61,9 +58,8 @@
       >
       </a-text>
 
-      <!-- -->
       <!-- HOUSE -->
-      <!-- -->
+
       <a-entity
         gltf-model="url(assets/house.glb)"
         position="0 0 0"
@@ -72,9 +68,8 @@
       >
       </a-entity>
 
-      <!--  -->
       <!-- INTERIOR -->
-      <!--  -->
+
       <a-entity
         gltf-model="url(assets/interior.glb)"
         position="0 0.08 0"
@@ -83,9 +78,8 @@
       >
       </a-entity>
 
-      <!-- ===================== -->
       <!-- CAR -->
-      <!-- ===================== -->
+
       <a-entity
         gltf-model="url(assets/car.glb)"
         position="-12 0 -30"
@@ -94,9 +88,8 @@
       >
       </a-entity>
 
-      <!-- ===================== -->
       <!-- DOG -->
-      <!-- ===================== -->
+
       <a-entity
         gltf-model="url(assets/dog.glb)"
         position="6 0 -22"
@@ -112,9 +105,8 @@
       >
       </a-entity>
 
-      <!-- ===================== -->
       <!-- POOL -->
-      <!-- ===================== -->
+
       <a-entity
         gltf-model="url(assets/pool.glb)"
         position="35 0 0"
